inverse navbar theme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-    <!-- Fixed navbar -->
+    <!-- Fixed navbar test -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
