--- a/index.html
+++ b/index.html
@@ -64,9 +64,34 @@
     <h1>Hello, world!</h1>
 
     <div class="page-header">
-        <h1>Thumbnails</h1>
+        <h1>Badges</h1>
       </div>
-      <img data-src="holder.js/200x200" class="img-thumbnail" alt="A generic square placeholder image with a white border around it, making it resemble a photograph taken with an old instant camera">
+      <p>
+        <a href="#">Inbox <span class="badge">1245</span></a>
+      </p>
+      <ul class="nav nav-pills" role="tablist">
+
+        <li role="presentation" class="active"><a href="#">Home <span class="badge">42</span></a></li>
+
+        <li role="presentation"><a href="#">Profile</a></li>
+
+        <li role="presentation"><a href="#">Messages <span class="badge">33</span></a></li>
+        
+        <li><a href="#" class="badge ">Doodads <span class="badge">69</span></a></li>
+      </ul>
+    </div>
+
+    <div class="page-header">
+        <h1>Labels</h1>
+      </div>
+      <h1>
+        <span class="label label-default">Default</span>
+        <span class="label label-primary">Primary</span>
+        <span class="label label-success">Success</span>
+        <span class="label label-info">Info</span>
+        <span class="label label-warning">Warning</span>
+        <span class="label label-danger">Danger</span>
+      </h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
